[package]
name = "zoom-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
base64 = "0.22.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
